added table for data

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,23 @@
 .App-link {
   color: #61dafb;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
 
 @keyframes App-logo-spin {
   from {
